--- a/homework_6/homework_6_additional/index.html
+++ b/homework_6/homework_6_additional/index.html
@@ -3,33 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
-    <div class="wrapper">
-        <header class="main_style">A</header>
-        <main>
-            <section class="main_style">
-
-                <article class="first_part">
-                    <div>B</div>
-                    <div>C</div>
-                    <div>D</div>
-                </article>
-
-               <article class="second_part">
-                   <div>E</div>
-                   <div>F</div>
-                   <div>G</div>
-               </article>
-
-            </section>
-            <section class="main_style">
-                <div class="main_style">H</div>
-            </section>
-        </main>
-    </div>
-
+    <header class="style_main">A</header>
+    <main>
+        <section class="left_side_bar">
+            <article class="first_row">
+                <div>B</div>
+                <div>C</div>
+                <div>D</div>
+            </article>
+            <article class="second_row">
+                <div>E</div>
+                <div>F</div>
+                <div>G</div>
+            </article>
+        </section>
+        <section class="right_side_bar style_main">H</section>
+    </main>
 </body>
 </html>
