--- a/project/index.html
+++ b/project/index.html
@@ -47,10 +47,82 @@
             </div>
         </section>
     </article>
-
-
 </header>
 
+<main>
+    <section>
+        <article class="main_title">
+            <h2>Join a community<br>of millions.</h2>
+        </article>
+        <article class="main_values">
+            <div>
+                <h2>11.5M+</h2>
+                <p>Active accounts</p>
+            </div>
+            <div>
+                <h2>21.9M</h2>
+                <p>NFTs minted</p>
+            </div>
+            <div>
+                <h2>$0.00025</h2>
+                <p>Average cost per transaction</p>
+            </div>
+        </article>
+    </section>
+
+    <section>
+        <article class="main_adoption">
+            <h2>Made for<br>mass adoption.</h2>
+            <p>Live data</p>
+        </article>
+        <article class="main_articles">
+            <section>
+                <div>
+                    <h3>Fast</h3>
+                    <p>Don’t keep your users waiting.<br>Solana has block times of 400<br>milliseconds — and as hardware<br>gets
+                        faster, so will the network.</p>
+                </div>
+                <div>
+                    <h3>3,969</h3>
+                    <p>TRANSACTIONS PER SECOND</p>
+                </div>
+                <div>
+                    <h3>Scalable</h3>
+                    <p>Get big, quick. Solana is made<br>to handle thousands of<br>transactions per second, and<br>fees
+                        for both developers and users remain less than $0.01.</p>
+                </div>
+                <div>
+                    <h3>163,077,581,394</h3>
+                    <p>TOTAL TRANSACTIONS</p>
+                </div>
+            </section>
+<!--            <section>-->
+<!--                <div>-->
+<!--                    <h3>Decentralized</h3>-->
+<!--                    <p>The Solana network is validated<br>by thousands of nodes that<br>operate independently of-->
+<!--                        each<br>other,-->
+<!--                        ensuring your data remains<br>secure and censorship resistant.</p>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    <h3>1,675</h3>-->
+<!--                    <p>VALIDATOR NODES</p>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    <h3>Energy Efficient</h3>-->
+<!--                    <p>Solana’s proof of stake network and other innovations minimize its impact on the <a href="">environment.</a>-->
+<!--                        Each Solana transaction uses about the same energy as a few Google searches.</p>-->
+<!--                </div>-->
+<!--                <div>-->
+<!--                    <h3></h3>-->
+<!--                    <p></p>-->
+<!--                </div>-->
+
+<!--            </section>-->
+        </article>
+    </section>
+
+
+</main>
 
 </body>
 </html>
