--- a/project/index.html
+++ b/project/index.html
@@ -76,7 +76,7 @@
             <p>Live data</p>
         </article>
         <article class="main_articles">
-            <section>
+            <div class="main_articles_section_1">
                 <div>
                     <h3>Fast</h3>
                     <p>Don’t keep your users waiting.<br>Solana has block times of 400<br>milliseconds — and as hardware<br>gets
@@ -89,36 +89,57 @@
                 <div>
                     <h3>Scalable</h3>
                     <p>Get big, quick. Solana is made<br>to handle thousands of<br>transactions per second, and<br>fees
-                        for both developers and users remain less than $0.01.</p>
+                        for both developers and<br>users remain less than $0.01.</p>
                 </div>
                 <div>
                     <h3>163,077,581,394</h3>
                     <p>TOTAL TRANSACTIONS</p>
                 </div>
-            </section>
-<!--            <section>-->
-<!--                <div>-->
-<!--                    <h3>Decentralized</h3>-->
-<!--                    <p>The Solana network is validated<br>by thousands of nodes that<br>operate independently of-->
-<!--                        each<br>other,-->
-<!--                        ensuring your data remains<br>secure and censorship resistant.</p>-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <h3>1,675</h3>-->
-<!--                    <p>VALIDATOR NODES</p>-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <h3>Energy Efficient</h3>-->
-<!--                    <p>Solana’s proof of stake network and other innovations minimize its impact on the <a href="">environment.</a>-->
-<!--                        Each Solana transaction uses about the same energy as a few Google searches.</p>-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <h3></h3>-->
-<!--                    <p></p>-->
-<!--                </div>-->
+            </div>
+            <div class="main_articles_section_2">
+                <div>
+                    <h3>Decentralized</h3>
+                    <p>The Solana network is validated<br>by thousands of nodes that<br>operate independently of
+                        each<br>other,
+                        ensuring your data remains<br>secure and censorship resistant.</p>
+                </div>
+                <div>
+                    <h3>1,675</h3>
+                    <p>VALIDATOR NODES</p>
+                </div>
+                <div>
+                    <h3>Energy Efficient</h3>
+                    <p>Solana’s proof of stake network<br>and other innovations minimize<br>its impact on the <a href="">environment.</a><br>
+                        Each Solana transaction uses<br>about the same energy as a few<br>Google searches.</p>
+                </div>
+                <div>
+                    <h3>0%</h3>
+                    <p>NET CARBON IMPACT</p>
+                </div>
 
-<!--            </section>-->
+            </div>
         </article>
+    </section>
+
+    <section>
+        <div class="bottom_nav">
+            <div>
+                <h2>Build for growth.</h2>
+            </div>
+            <div>
+                <a href="">NFTs</a>
+                <a href="">DeFi</a>
+                <a href="">Payments</a>
+                <a href="">Gaming</a>
+                <a href="">DAOs</a>
+            </div>
+        </div>
+<!--        <div>-->
+<!--            <img src="" alt="">-->
+<!--            <article></article>-->
+<!--        </div>-->
+<!--        <div class="bottom_images"></div>-->
+
     </section>
 
 
