--- a/project/index.html
+++ b/project/index.html
@@ -109,7 +109,8 @@
                 </div>
                 <div>
                     <h3>Energy Efficient</h3>
-                    <p>Solana’s proof of stake network<br>and other innovations minimize<br>its impact on the <a href="">environment.</a><br>
+                    <p>Solana’s proof of stake network<br>and other innovations minimize<br>its impact on the <a
+                            href="">environment.</a><br>
                         Each Solana transaction uses<br>about the same energy as a few<br>Google searches.</p>
                 </div>
                 <div>
@@ -134,15 +135,22 @@
                 <a href="">DAOs</a>
             </div>
         </div>
-<!--        <div>-->
-<!--            <img src="" alt="">-->
-<!--            <article></article>-->
-<!--        </div>-->
-<!--        <div class="bottom_images"></div>-->
-
+        <div class="section_images">
+            <img src="images/IMAGE.png" alt="">
+            <div>
+                <img src="images/image%209.png" alt="">
+                <p>It’s time to bridge the digital and physical.<br>Anybodies helps established brands like<br>Toys’R’Us
+                    connect real-life places and<br>products with NFTs.</p>
+                <p>Learn more about NFTson Solana</p>
+            </div>
+        </div>
+        <div class="section_bottom_images">
+            <img src="images/IMAGE%20(1).png" alt="">
+            <img src="images/image%2010.png" alt="">
+            <img src="images/image%2011.png" alt="">
+            <img src="images/IMAGE%20(2).png" alt="">
+        </div>
     </section>
-
-
 </main>
 
 </body>
